# advanced-robotics

./: .gitignore  .gitmodules  README.md
exercise_1/: readme.md
exercise_1/ros2_ws/install/: local_setup.sh  setup.sh
exercise_1/ros2_ws/log/: latest_build
exercise_1/ros2_ws/src/ex1_fk/: CMakeLists.txt  package.xml
exercise_1/ros2_ws/src/ex1_fk/src/: eigen.cpp  kdl.cpp
exercise_2/: README.md
exercise_2/install/: local_setup.sh  setup.sh
exercise_2/install/arm_controllers/share/arm_controllers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
exercise_2/install/franka_description/share/franka_description/: package.sh
exercise_2/install/franka_gazebo/share/franka_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
exercise_2/log/: latest_build  latest_list
exercise_2/movement_controllers/: CMakeLists_modifiable_version.txt  controllers_plugin.xml  franka_controllers.yaml  package_modifiable.xml  switching_example.launch.py
exercise_2/movement_controllers/controller/: movement_controller.cpp  movement_controller.hpp
exercise_2/movement_controllers/first/: first_movement_controller.cpp  first_movement_controller.hpp
exercise_2/movement_controllers/second/: second_movement_controller.cpp  second_movement_controller.hpp
exercise_3/: README.md
exercise_3/src/edu-franka_simulation/arm_controllers/: CMakeLists.txt  controllers_plugin.xml
exercise_3/src/edu-franka_simulation/arm_controllers/src/: gravity_pd_controller.cpp  gravity_pd_controller_ilari.cpp  (+2 more)
exercise_4/edu-franka_vs_ws/src/: README.md
exercise_4/edu-franka_vs_ws/src/arm_controllers/: CMakeLists.txt  controllers_plugin.xml
exercise_4/edu-franka_vs_ws/src/franka_gazebo/: CMakeLists.txt  package.xml
exercise_4/edu-franka_vs_ws/src/franka_gazebo/config/: franka_controllers.yaml  pids_gains.yaml
exercise_4/edu-franka_vs_ws/src/franka_gazebo/launch/: computed_torque_controller.launch.py  launch_with_camera.launch.py
exercise_4/edu-franka_vs_ws/src/franka_gazebo/models/aruco_marker_0_100mm/: model.config  model.sdf
exercise_4/edu-franka_vs_ws/src/franka_gazebo/models/panda/: model.config  model.sdf
exercise_4/edu-franka_vs_ws/src/franka_gazebo/models/panda_with_cam/: model.config  model.sdf.in
exercise_4/edu-franka_vs_ws/src/franka_gazebo/models/rgb_camera/: model.config  model.sdf
exercise_4/edu-franka_vs_ws/src/franka_gazebo/scripts/: make_aruco.py  pose_estimate.py  tri_wave.py
exercise_4/edu-franka_vs_ws/src/franka_gazebo/worlds/: cam_world2.sdf
exercise_5/src/edu-franka_simulation/arm_controllers/: CMakeLists.txt  package.xml
exercise_6/src/edu-franka_simulation/arm_controllers/: CMakeLists.txt  controllers_plugin.xml  package.xml
(+53 files in other folders)
